--- a/04DOM/01dom/index.html
+++ b/04DOM/01dom/index.html
@@ -4,11 +4,8 @@
     <title>DOM</title>
 </head>
 <body>
-    <div class="nav"></div>
-    <div class="body">
-        <h1>LearnCodeOnline<a href="">Click fere</a></h1>
-        <img src="" alt=""/>
+    <div>
+        <div class="title">LearnCodeOnline.in</div>
     </div>
-    <div class="footer"></div>  
 </body>
 </html>
